--- a/spotify/src/app/shared/components/side-bar/side-bar.component.html
+++ b/spotify/src/app/shared/components/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
-<!-- <div class="side-bar">
+<div class="side-bar">
   <div><i class="uil uil-ellipsis-h"></i></div>
   <ul class="side-bar__list list-one">
-    <li [routerLink]="item.router" [queryParams]="item.query" *ngFor="let item of mainMenu.defaultOptions">
+    <li *ngFor="let item of mainMenu.defaultOptions"> <!-- [routerLink]="item.router" [queryParams]="item.query"-->
       <div class="list-wrapper-item">
         <i [ngClass]="['uil',item.icon]"></i>
         <span class="side-bar__list list-label">{{item.name}}</span>
@@ -25,6 +25,4 @@
       </div>
     </li>
   </ul>
-</div> -->
-
-<p>Side bar</p>
+</div>
