--- a/spotify/src/app/shared/components/play-list-header/play-list-header.component.html
+++ b/spotify/src/app/shared/components/play-list-header/play-list-header.component.html
@@ -1,1 +1,12 @@
-<p>play-list-header works!</p>
+<div class="play-list-header">
+  <div class="cover">
+    <div class="cover-mock">
+      <i class="uil uil-heart"></i>
+    </div>
+  </div>
+  <div class="content-text">
+    <div class="small-text">Playlist</div>
+    <h1 class="title">Canciones que te gustan</h1>
+    <h5 class="sub-title">Juan José García Navarrete <span class="count-tracks">206 canciones</span> </h5>
+  </div>
+</div>
