add directive img-broken and implementation

--- a/spotify/src/app/shared/components/play-list-body/play-list-body.component.css
+++ b/spotify/src/app/shared/components/play-list-body/play-list-body.component.css
@@ -21,6 +21,10 @@
   opacity: .7;
 }
 
+.play-list-table-header li span {
+  cursor: pointer;
+}
+
 .play-list-rows {
   width: 100%;
   list-style: none;
