--- a/spotify/src/app/shared/components/card-player/card-player.component.html
+++ b/spotify/src/app/shared/components/card-player/card-player.component.html
@@ -24,7 +24,7 @@
     [customImg]="'https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png'"
     [src]="track.cover" alt="" class="cover"> -->
 
-  <img [src]="track.cover" alt="" class="cover">
+  <img appImgBroken [customImg]="'../../assets/images/img-broken.jpg'" [src]="track.cover" alt="" class="cover">
 
   <div class="content-player">
     <div class="title-track">{{track.name}}</div>
