add a cookie to save the session token when the user loguin

--- a/src/app/modules/auth/pages/auth-page/auth-page.component.html
+++ b/src/app/modules/auth/pages/auth-page/auth-page.component.html
@@ -21,7 +21,7 @@
         <a class="link" href="">¿Se te ha olvidado la contraseña?</a>
       </div>
       <div *ngIf="errorSession">
-        Ocurrio un error con tu email o password
+        El email o contraseña incorrecta
       </div>
       <div class="form-action">
         <button [disabled]="formLogin.invalid" class="login social-btn">Iniciar sesión</button>
